ReDesign : Same functionality working through Fragment. (To set platfrom for viewPagers through fragments)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,33 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+    android:id="@+id/main_activity_id"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorAccent"
     tools:context="com.reddyz.newz.MainActivity">
-
-    <ListView
-        android:id="@+id/main_list_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/white"
-        android:layout_margin="@dimen/list_padding"/>
-
-    <ProgressBar
-        android:id="@+id/main_list_progress_bar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"/>
-
-    <!-- Empty view is only visible when the list has no items. -->
-    <TextView
-        android:id="@+id/main_list_empty_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/main_list_progress_bar"
-        android:layout_centerInParent="true"
-        android:gravity="center"
-        tools:text="@string/loading_state_text"/>
 
 </RelativeLayout>
