--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,7 @@
     <dimen name="list_padding">8dp</dimen>
     <dimen name="list_primary_text_size">16sp</dimen>
     <dimen name="list_secondary_text_size">12sp</dimen>
+    <dimen name="detail_text_size">16sp</dimen>
+    <dimen name="detail_title_size">24sp</dimen>
+    <dimen name="detail_item_padding">5dp</dimen>
 </resources>
