--- a/app/src/main/res/layout/news_detail_activity.xml
+++ b/app/src/main/res/layout/news_detail_activity.xml
@@ -1,48 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.reddyz.newz.NewsDetailActivity"
     android:orientation="vertical"
-    android:padding="@dimen/list_padding"
-    android:id="@+id/news_detail_activity"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/news_detail_image"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/detail_view_pager"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3"
-        android:src="@drawable/news_default_image"/>
-
-    <TextView
-        android:id="@+id/news_detail_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:maxLines="2"
-        android:padding="@dimen/detail_item_padding"
-        android:textColor="@android:color/black"
-        android:textStyle="bold"
-        android:textSize="@dimen/detail_title_size"/>
-
-    <TextView
-        android:id="@+id/news_detail_text"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
-        android:textSize="@dimen/detail_text_size"
-        android:textColor="@android:color/black"/>
-
-    <TextView
-        android:id="@+id/news_read_more"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:padding="@dimen/detail_item_padding"
-        android:textSize="@dimen/list_primary_text_size"
-        android:textColor="@color/colorPrimaryDark"
-        android:background="@android:color/darker_gray"
-        android:text="Click here to read more.."/>
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
