--- a/app/src/main/res/layout/news_detail_fragment.xml
+++ b/app/src/main/res/layout/news_detail_fragment.xml
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxLines="2"
-        android:padding="@dimen/detail_item_padding"
+        android:paddingTop="@dimen/detail_item_padding"
         android:textColor="@android:color/black"
         android:textStyle="bold"
         android:textSize="@dimen/detail_title_size"/>
@@ -31,6 +31,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2"
+        android:paddingTop="@dimen/list_padding"
+        android:paddingBottom="@dimen/list_padding"
         android:textSize="@dimen/detail_text_size"
         android:textColor="@android:color/black"/>
 
